--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.8.3",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "nodejs": "^0.0.0"
   }
 }
